@@ -16,7 +16,7 @@ CodeName = Priamos
 
 DEFAULT_ADMIN_ADDRESS =
 
-SERVER_HOSTNAME = fedora
+SERVER_HOSTNAME = centos
 
 BASE_SERVER_IP = 127.0.0.1
 
