@@ -20,4 +20,5 @@
 <IfModule mod_fcgid.c>
   AddHandler fcgid-script .php .php{PHP_VERSION}
   IPCConnectTimeout 20
+  DirectoryIndex index.php
 </IfModule>
