@@ -44,5 +44,21 @@ sys-devel/gettext
 www-apache/mod_fcgid
 www-servers/apache
 mail-filter/policyd-weight
-mail-filter/postgrey
-dev-db/mysql
+awstats
+vixie-cron
+syslog-ng
+mysql
+gdbm
+db
+logrotate
+zip
+mod_cband
+policyd
+clamav
+postgrey
+MIME-tools
+DateManip
+IO-Tty
+Parse-Yapp
+XML-DOM
+quota
